src/antlr/html/HtmlParser.java
// Generated from /home/ghifar/Downloads/Telegram Desktop/compiler/psychic-broccoli-main/grammars/HtmlParser.g4 by ANTLR 4.13.2
package antlr.html;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HtmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JINJA_EXPR_START=1, JINJA_STMT_START=2, JINJA_COMMENT_START=3, HTML_COMMENT=4, 
		HTML_CONDITIONAL_COMMENT=5, XML_DECLARATION=6, CDATA=7, DTD=8, SCRIPTLET=9, 
		SEA_WS=10, STYLE_OPEN=11, SCRIPT_OPEN=12, TAG_OPEN=13, HTML_TEXT=14, TAG_CLOSE=15, 
		TAG_SLASH_CLOSE=16, TAG_SLASH=17, TAG_EQUALS=18, TAG_NAME=19, TAG_WHITESPACE=20, 
		ATTVALUE_VALUE=21, STYLE_CLOSE=22, CSS_LBRACE=23, CSS_RBRACE=24, CSS_LPAREN=25, 
		CSS_RPAREN=26, CSS_COLON=27, CSS_SEMI=28, CSS_COMMA=29, CSS_DOT=30, CSS_GT=31, 
		CSS_HASH=32, CSS_HEX_COLOR=33, CSS_NUMBER=34, CSS_UNIT=35, CSS_STRING=36, 
		CSS_ID=37, CSS_Space=38, CSS_Comment=39, CSS_TILDE=40, CSS_UNIVERSAL=41, 
		CSS_AT=42, CSS_MINUS=43, CSS_IMPORTANT=44, SCRIPT_CLOSE=45, SCRIPT_CONTENT=46, 
		JINJA_EXPR_END=47, JINJA_STMT_END=48, J_EXTENDS=49, J_BLOCK=50, J_ENDBLOCK=51, 
		J_FOR=52, J_ENDFOR=53, J_IF=54, J_ELIF=55, J_ELSE=56, J_ENDIF=57, J_IN=58, 
		J_WITH=59, J_ENDWITH=60, J_LENGTH=61, J_OR=62, J_AND=63, J_NOT=64, J_IS=65, 
		J_FILTER=66, J_TRUE=67, J_FALSE=68, J_NONE=69, J_LPAREN=70, J_RPAREN=71, 
		J_LBRACK=72, J_RBRACK=73, J_COMMA=74, J_DOT=75, J_COLON=76, J_PIPE=77, 
		J_EQ=78, J_NEQ=79, J_GT=80, J_LT=81, J_ASSIGN=82, J_NUMBER=83, J_STRING=84, 
		J_NAME=85, J_WS=86;
	public static final int
		RULE_html_content = 0, RULE_html_content_item = 1, RULE_htmlElement = 2, 
		RULE_tag_content = 3, RULE_style_sheet = 4, RULE_ruleSet = 5, RULE_selector_decl = 6, 
		RULE_css_selector_list = 7, RULE_css_selector = 8, RULE_declarationList = 9, 
		RULE_declaration = 10, RULE_css_value = 11, RULE_css_function_args = 12, 
		RULE_css_function_call = 13, RULE_cssterm = 14, RULE_css_at_rule = 15, 
		RULE_css_at_rule_body = 16, RULE_jinjaStatementBlock = 17, RULE_jinjaExpressionBlock = 18, 
		RULE_jStatement = 19, RULE_j_with_stmt = 20, RULE_j_extends_stmt = 21, 
		RULE_j_block_stmt = 22, RULE_j_for_stmt = 23, RULE_j_if_stmt = 24, RULE_j_expression = 25, 
		RULE_j_call_expr = 26, RULE_j_slice = 27, RULE_j_var_access = 28, RULE_j_argument_list = 29, 
		RULE_j_argument = 30, RULE_j_atom = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"html_content", "html_content_item", "htmlElement", "tag_content", "style_sheet", 
			"ruleSet", "selector_decl", "css_selector_list", "css_selector", "declarationList", 
			"declaration", "css_value", "css_function_args", "css_function_call", 
			"cssterm", "css_at_rule", "css_at_rule_body", "jinjaStatementBlock", 
			"jinjaExpressionBlock", "jStatement", "j_with_stmt", "j_extends_stmt", 
			"j_block_stmt", "j_for_stmt", "j_if_stmt", "j_expression", "j_call_expr", 
			"j_slice", "j_var_access", "j_argument_list", "j_argument", "j_atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", "'{%'", "'{#'", null, null, null, null, null, null, null, 
			null, null, null, null, null, "'/>'", "'/'", null, null, null, null, 
			null, "'{'", "'}'", null, null, null, "';'", null, null, null, "'#'", 
			null, null, null, null, null, null, null, "'~'", "'*'", "'@'", "'-'", 
			"'!important'", null, null, "'}}'", "'%}'", "'extends'", "'block'", "'endblock'", 
			"'for'", "'endfor'", "'if'", "'elif'", "'else'", "'endif'", "'in'", "'with'", 
			"'endwith'", "'length'", "'or'", "'and'", "'not'", "'is'", "'filter'", 
			"'true'", "'false'", "'none'", null, null, "'['", "']'", null, null, 
			null, "'|'", "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JINJA_EXPR_START", "JINJA_STMT_START", "JINJA_COMMENT_START", 
			"HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML_DECLARATION", "CDATA", 
			"DTD", "SCRIPTLET", "SEA_WS", "STYLE_OPEN", "SCRIPT_OPEN", "TAG_OPEN", 
			"HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", 
			"TAG_NAME", "TAG_WHITESPACE", "ATTVALUE_VALUE", "STYLE_CLOSE", "CSS_LBRACE", 
			"CSS_RBRACE", "CSS_LPAREN", "CSS_RPAREN", "CSS_COLON", "CSS_SEMI", "CSS_COMMA", 
			"CSS_DOT", "CSS_GT", "CSS_HASH", "CSS_HEX_COLOR", "CSS_NUMBER", "CSS_UNIT", 
			"CSS_STRING", "CSS_ID", "CSS_Space", "CSS_Comment", "CSS_TILDE", "CSS_UNIVERSAL", 
			"CSS_AT", "CSS_MINUS", "CSS_IMPORTANT", "SCRIPT_CLOSE", "SCRIPT_CONTENT", 
			"JINJA_EXPR_END", "JINJA_STMT_END", "J_EXTENDS", "J_BLOCK", "J_ENDBLOCK", 
			"J_FOR", "J_ENDFOR", "J_IF", "J_ELIF", "J_ELSE", "J_ENDIF", "J_IN", "J_WITH", 
			"J_ENDWITH", "J_LENGTH", "J_OR", "J_AND", "J_NOT", "J_IS", "J_FILTER", 
			"J_TRUE", "J_FALSE", "J_NONE", "J_LPAREN", "J_RPAREN", "J_LBRACK", "J_RBRACK", 
			"J_COMMA", "J_DOT", "J_COLON", "J_PIPE", "J_EQ", "J_NEQ", "J_GT", "J_LT", 
			"J_ASSIGN", "J_NUMBER", "J_STRING", "J_NAME", "J_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HtmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HtmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Html_contentContext extends ParserRuleContext {
		public Html_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_content; }
	 
		public Html_contentContext() { }
		public void copyFrom(Html_contentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends Html_contentContext {
		public List<Html_content_itemContext> html_content_item() {
			return getRuleContexts(Html_content_itemContext.class);
		}
		public Html_content_itemContext html_content_item(int i) {
			return getRuleContext(Html_content_itemContext.class,i);
		}
		public HtmlContentContext(Html_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Html_contentContext html_content() throws RecognitionException {
		Html_contentContext _localctx = new Html_contentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_html_content);
		try {
			int _alt;
			_localctx = new HtmlContentContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					html_content_item();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Html_content_itemContext extends ParserRuleContext {
		public Html_content_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_content_item; }
	 
		public Html_content_itemContext() { }
		public void copyFrom(Html_content_itemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaStmtItemContext extends Html_content_itemContext {
		public JinjaStatementBlockContext jinjaStatementBlock() {
			return getRuleContext(JinjaStatementBlockContext.class,0);
		}
		public JinjaStmtItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitJinjaStmtItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaExprItemContext extends Html_content_itemContext {
		public JinjaExpressionBlockContext jinjaExpressionBlock() {
			return getRuleContext(JinjaExpressionBlockContext.class,0);
		}
		public JinjaExprItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitJinjaExprItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementItemContext extends Html_content_itemContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public HtmlElementItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlElementItem(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlTextItemContext extends Html_content_itemContext {
		public TerminalNode HTML_TEXT() { return getToken(HtmlParser.HTML_TEXT, 0); }
		public HtmlTextItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlTextItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Html_content_itemContext html_content_item() throws RecognitionException {
		Html_content_itemContext _localctx = new Html_content_itemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_html_content_item);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STYLE_OPEN:
			case SCRIPT_OPEN:
			case TAG_OPEN:
				_localctx = new HtmlElementItemContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				htmlElement();
				}
				break;
			case HTML_TEXT:
				_localctx = new HtmlTextItemContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(HTML_TEXT);
				}
				break;
			case JINJA_STMT_START:
				_localctx = new JinjaStmtItemContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				jinjaStatementBlock();
				}
				break;
			case JINJA_EXPR_START:
				_localctx = new JinjaExprItemContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				jinjaExpressionBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ScriptElementContext extends HtmlElementContext {
		public TerminalNode SCRIPT_OPEN() { return getToken(HtmlParser.SCRIPT_OPEN, 0); }
		public TerminalNode SCRIPT_CLOSE() { return getToken(HtmlParser.SCRIPT_CLOSE, 0); }
		public TerminalNode SCRIPT_CONTENT() { return getToken(HtmlParser.SCRIPT_CONTENT, 0); }
		public ScriptElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TagElementContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(HtmlParser.TAG_OPEN, 0); }
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(HtmlParser.TAG_SLASH_CLOSE, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(HtmlParser.TAG_CLOSE, 0); }
		public List<Tag_contentContext> tag_content() {
			return getRuleContexts(Tag_contentContext.class);
		}
		public Tag_contentContext tag_content(int i) {
			return getRuleContext(Tag_contentContext.class,i);
		}
		public TagElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitTagElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleElementContext extends HtmlElementContext {
		public TerminalNode STYLE_OPEN() { return getToken(HtmlParser.STYLE_OPEN, 0); }
		public Style_sheetContext style_sheet() {
			return getRuleContext(Style_sheetContext.class,0);
		}
		public TerminalNode STYLE_CLOSE() { return getToken(HtmlParser.STYLE_CLOSE, 0); }
		public StyleElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			int _alt;
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_OPEN:
				_localctx = new TagElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(TAG_OPEN);
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(77);
						tag_content();
						}
						} 
					}
					setState(82);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(83);
				_la = _input.LA(1);
				if ( !(_la==TAG_CLOSE || _la==TAG_SLASH_CLOSE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case STYLE_OPEN:
				_localctx = new StyleElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(STYLE_OPEN);
				setState(85);
				style_sheet();
				setState(86);
				match(STYLE_CLOSE);
				}
				break;
			case SCRIPT_OPEN:
				_localctx = new ScriptElementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				match(SCRIPT_OPEN);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SCRIPT_CONTENT) {
					{
					setState(89);
					match(SCRIPT_CONTENT);
					}
				}

				setState(92);
				match(SCRIPT_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tag_contentContext extends ParserRuleContext {
		public Tag_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_content; }
	 
		public Tag_contentContext() { }
		public void copyFrom(Tag_contentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClosingMarkerContext extends Tag_contentContext {
		public TerminalNode TAG_SLASH() { return getToken(HtmlParser.TAG_SLASH, 0); }
		public ClosingMarkerContext(Tag_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitClosingMarker(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlAttributeContext extends Tag_contentContext {
		public TerminalNode TAG_NAME() { return getToken(HtmlParser.TAG_NAME, 0); }
		public TerminalNode TAG_EQUALS() { return getToken(HtmlParser.TAG_EQUALS, 0); }
		public TerminalNode ATTVALUE_VALUE() { return getToken(HtmlParser.ATTVALUE_VALUE, 0); }
		public HtmlAttributeContext(Tag_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tag_contentContext tag_content() throws RecognitionException {
		Tag_contentContext _localctx = new Tag_contentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tag_content);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_NAME:
				_localctx = new HtmlAttributeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(TAG_NAME);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TAG_EQUALS) {
					{
					setState(96);
					match(TAG_EQUALS);
					setState(97);
					match(ATTVALUE_VALUE);
					}
				}

				}
				break;
			case TAG_SLASH:
				_localctx = new ClosingMarkerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(TAG_SLASH);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Style_sheetContext extends ParserRuleContext {
		public Style_sheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_style_sheet; }
	 
		public Style_sheetContext() { }
		public void copyFrom(Style_sheetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleSheetContext extends Style_sheetContext {
		public List<RuleSetContext> ruleSet() {
			return getRuleContexts(RuleSetContext.class);
		}
		public RuleSetContext ruleSet(int i) {
			return getRuleContext(RuleSetContext.class,i);
		}
		public List<Css_at_ruleContext> css_at_rule() {
			return getRuleContexts(Css_at_ruleContext.class);
		}
		public Css_at_ruleContext css_at_rule(int i) {
			return getRuleContext(Css_at_ruleContext.class,i);
		}
		public StyleSheetContext(Style_sheetContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitStyleSheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Style_sheetContext style_sheet() throws RecognitionException {
		Style_sheetContext _localctx = new Style_sheetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_style_sheet);
		int _la;
		try {
			_localctx = new StyleSheetContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6735582461952L) != 0)) {
				{
				setState(105);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CSS_DOT:
				case CSS_ID:
				case CSS_UNIVERSAL:
					{
					setState(103);
					ruleSet();
					}
					break;
				case CSS_AT:
					{
					setState(104);
					css_at_rule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleSetContext extends ParserRuleContext {
		public RuleSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSet; }
	 
		public RuleSetContext() { }
		public void copyFrom(RuleSetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssRuleContext extends RuleSetContext {
		public Selector_declContext selector_decl() {
			return getRuleContext(Selector_declContext.class,0);
		}
		public TerminalNode CSS_LBRACE() { return getToken(HtmlParser.CSS_LBRACE, 0); }
		public DeclarationListContext declarationList() {
			return getRuleContext(DeclarationListContext.class,0);
		}
		public TerminalNode CSS_RBRACE() { return getToken(HtmlParser.CSS_RBRACE, 0); }
		public CssRuleContext(RuleSetContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitCssRule(this);
			else return visitor.visitChildren(this);
		}
	}
